--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
+title: Avalon
+subtitle: Event Design & Creative Direction
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
-author:
+url: https://avaloncreative.github.io # the base hostname & protocol for your site
+author: Ilef Sebai
 street_address: 1234 Somewhere Road
 city: Nashville
 state: TN
