--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Event Design & Creative Direction
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: https://avaloncreative.github.io # the base hostname & protocol for your site
+url: "https://avaloncreative.github.io" # the base hostname & protocol for your site
 author: Ilef Sebai
 street_address: 1234 Somewhere Road
 city: Nashville
