--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # site settings
 title: Avalon
-subtitle: Event Design & Creative Direction
-email: youremailaddress@gmail.com
+subtitle: Eventavalon.creative.event@gmail.com Design & Creative Direction
+email: avalon.creative.event@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "" # the subpath of your site, e.g. /blog
 #baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
