Updated the config.yaml
Fixing a bug from the previous commit

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Avalon
-subtitle: Eventavalon.creative.event@gmail.com Design & Creative Direction
+subtitle: Event Design & Creative Direction
 email: avalon.creative.event@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "" # the subpath of your site, e.g. /blog
