--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Event Design & Creative Direction
 email: avalon.creative.event@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog. Used to be "/forty-jekyll-theme"
 
-description: Welcome to Avalon!
+description: Event Design & Creative Direction
 author: Ilef Sebai
 #street_address: 1234 Somewhere Road
 #city: Nashville
